# rs-dice-challenge

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
shared/: Cargo.toml
shared/src/: dice.rs  errors.rs  lib.rs  state.rs
