[package]
edition.workspace = true
license.workspace = true
name = "dice-challenge"
publish.workspace = true
version.workspace = true

[[bin]]
name = "dice-challenge"
path = "src/bin/app.rs"

[workspace]
members = ["shared"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ctrlc = "3.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "./shared" }
thiserror = "2.0.17"

[dependencies]
shared = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
rand = { workspace = true }
